[gd_scene load_steps=8 format=3 uid="uid://bo1x5dvivm04h"]

[ext_resource type="Script" path="res://scripts/unit01.gd" id="1_8dcbd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_eekku"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yg70k"]
size = Vector2(40, 56)

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_kvulg"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ci7o8"]
size = Vector2(7, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wyrp8"]
size = Vector2(7, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xhpvk"]
size = Vector2(7, 32)

[node name="Unit01" type="Node2D"]
script = ExtResource("1_8dcbd")

[node name="Head" type="RigidBody2D" parent="."]
position = Vector2(17, 7)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Head"]
position = Vector2(1, 1)
shape = SubResource("RectangleShape2D_eekku")

[node name="ColorRect" type="ColorRect" parent="Head"]
offset_left = -10.0
offset_top = -11.0
offset_right = 11.0
offset_bottom = 12.0
color = Color(0.462745, 0.670588, 0.87451, 1)

[node name="DampedSpringJoint2D" type="DampedSpringJoint2D" parent="."]
position = Vector2(18, 37)
node_a = NodePath("../Head")
node_b = NodePath("../Body")
length = 1.0
stiffness = 64.0
damping = 1.66

[node name="Body" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="RayCast2D" type="RayCast2D" parent="Body"]
position = Vector2(38, 45)
rotation = -1.5708
target_position = Vector2(-3.8147e-06, 29)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body"]
position = Vector2(20, 67)
shape = SubResource("RectangleShape2D_yg70k")

[node name="ColorRect" type="ColorRect" parent="Body"]
offset_top = 39.0
offset_right = 40.0
offset_bottom = 95.0
color = Color(0.415686, 0.372549, 1, 1)

[node name="PinJoint2D" type="PinJoint2D" parent="Body"]
position = Vector2(32, 94)
node_a = NodePath("..")
node_b = NodePath("../Leg2")

[node name="Leg1" type="RigidBody2D" parent="Body"]
position = Vector2(4, 91)
collision_layer = 0
physics_material_override = SubResource("PhysicsMaterial_kvulg")
gravity_scale = 2.874

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Leg1"]
position = Vector2(4, 16)
shape = SubResource("RectangleShape2D_ci7o8")

[node name="ColorRect" type="ColorRect" parent="Body/Leg1"]
offset_right = 7.0
offset_bottom = 32.0
color = Color(0.321569, 0, 0.976471, 1)

[node name="PinJoint2D" type="PinJoint2D" parent="Body/Leg1"]
position = Vector2(3, 32)
node_a = NodePath("..")
node_b = NodePath("../LowerLeg1")

[node name="LowerLeg1" type="RigidBody2D" parent="Body/Leg1"]
position = Vector2(0, 29)
collision_layer = 0
physics_material_override = SubResource("PhysicsMaterial_kvulg")
gravity_scale = 2.874

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Leg1/LowerLeg1"]
position = Vector2(4, 16)
shape = SubResource("RectangleShape2D_wyrp8")

[node name="ColorRect" type="ColorRect" parent="Body/Leg1/LowerLeg1"]
offset_right = 7.0
offset_bottom = 32.0
color = Color(0.356863, 0.223529, 1, 1)

[node name="PinJoint2D2" type="PinJoint2D" parent="Body"]
position = Vector2(7, 94)
node_a = NodePath("..")
node_b = NodePath("../Leg1")

[node name="Leg2" type="RigidBody2D" parent="Body"]
position = Vector2(29, 91)
collision_layer = 0
physics_material_override = SubResource("PhysicsMaterial_kvulg")
gravity_scale = 2.874

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Leg2"]
position = Vector2(4, 16)
shape = SubResource("RectangleShape2D_xhpvk")

[node name="ColorRect" type="ColorRect" parent="Body/Leg2"]
offset_right = 7.0
offset_bottom = 32.0
color = Color(0.321569, 0, 0.976471, 1)

[node name="PinJoint2D" type="PinJoint2D" parent="Body/Leg2"]
position = Vector2(3, 32)
node_a = NodePath("..")
node_b = NodePath("../LowerLeg2")

[node name="LowerLeg2" type="RigidBody2D" parent="Body/Leg2"]
position = Vector2(0, 29)
collision_layer = 0
physics_material_override = SubResource("PhysicsMaterial_kvulg")
gravity_scale = 2.874

[node name="CollisionShape2D" type="CollisionShape2D" parent="Body/Leg2/LowerLeg2"]
position = Vector2(4, 16)
shape = SubResource("RectangleShape2D_xhpvk")

[node name="ColorRect" type="ColorRect" parent="Body/Leg2/LowerLeg2"]
offset_right = 7.0
offset_bottom = 32.0
color = Color(0.356863, 0.223529, 1, 1)
